force-app/main/default/objects/Payment_Calc_Config__mdt/Payment_Calc_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for Payment Calculator background variables.</description>
    <label>Payment Calc Config</label>
    <pluralLabel>Payment Calc Configs</pluralLabel>
</CustomObject>