force-app/main/default/objects/Payment_Calc_Config__mdt/fields/Bank2_Fee__c.field-meta.xml
<CustomField>
    <fullName>Bank2_Fee__c</fullName>
    <label>Bank2 Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>