force-app/main/default/objects/Payment_Calc_Config__mdt/fields/Banking_Fee__c.field-meta.xml
<CustomField>
    <fullName>Banking_Fee__c</fullName>
    <label>Banking Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>