force-app/main/default/objects/Payment_Calc_Config__mdt/fields/Baseline_No_Fee_Program_Fee__c.field-meta.xml
<CustomField>
    <fullName>Baseline_No_Fee_Program_Fee__c</fullName>
    <description>Original fee percentage tracked for no-fee programs</description>
    <label>Baseline No-Fee Program Fee</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>