force-app/main/default/objects/Payment_Calc_Config__mdt/fields/Debt_Program_Setup_Fee__c.field-meta.xml
<CustomField>
    <fullName>Debt_Program_Setup_Fee__c</fullName>
    <label>Debt Program Setup Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>