force-app/main/default/objects/Payment_Calc_Config__mdt/fields/Default_Program_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Default_Program_Weeks__c</fullName>
    <description>Default program duration when not specified (2 years)</description>
    <label>Default Program Weeks</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>