force-app/main/default/objects/Payment_Calc_Config__mdt/fields/First_Payment_Days_Offset__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Days_Offset__c</fullName>
    <description>Default days from today for first payment date</description>
    <label>First Payment Days Offset</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>