force-app/main/default/objects/Payment_Calc_Config__mdt/fields/Legal_Monitoring_Weekly_Fee__c.field-meta.xml
<CustomField>
    <fullName>Legal_Monitoring_Weekly_Fee__c</fullName>
    <description>Weekly fee for legal monitoring add-on service</description>
    <label>Legal Monitoring Weekly Fee</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>