force-app/main/default/objects/Payment_Calc_Config__mdt/fields/Max_Program_Fee_Percent__c.field-meta.xml
<CustomField>
    <fullName>Max_Program_Fee_Percent__c</fullName>
    <description>Maximum allowed program fee percentage</description>
    <label>Max Program Fee Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>