force-app/main/default/objects/Payment_Calc_Config__mdt/fields/Max_Program_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Max_Program_Weeks__c</fullName>
    <description>Maximum program duration in weeks (approximately 4 years)</description>
    <label>Max Program Weeks</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>