force-app/main/default/objects/Payment_Calc_Config__mdt/fields/Max_Target_Percent__c.field-meta.xml
<CustomField>
    <fullName>Max_Target_Percent__c</fullName>
    <description>Maximum target percentage slider value</description>
    <label>Max Target Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>