force-app/main/default/objects/Payment_Calc_Config__mdt/fields/Min_Program_Fee_Percent__c.field-meta.xml
<CustomField>
    <fullName>Min_Program_Fee_Percent__c</fullName>
    <description>Minimum allowed program fee percentage</description>
    <label>Min Program Fee Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>