force-app/main/default/objects/Payment_Calc_Config__mdt/fields/Min_Program_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Min_Program_Weeks__c</fullName>
    <description>Absolute minimum program duration in weeks</description>
    <label>Min Program Weeks</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>