force-app/main/default/objects/Payment_Calc_Config__mdt/fields/Min_Target_Percent_DCG_Debt__c.field-meta.xml
<CustomField>
    <fullName>Min_Target_Percent_DCG_Debt__c</fullName>
    <description>Minimum target percentage slider value for DCG_DEBT programs</description>
    <label>Min Target Percent DCG Debt</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>