force-app/main/default/objects/Payment_Calc_Config__mdt/fields/Min_Weekly_Target_Payment__c.field-meta.xml
<CustomField>
    <fullName>Min_Weekly_Target_Payment__c</fullName>
    <description>Minimum weekly payment floor for standard programs</description>
    <label>Min Weekly Target Payment</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>