force-app/main/default/objects/Payment_Calc_Config__mdt/fields/Mod_Program_Split_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Mod_Program_Split_Ratio__c</fullName>
    <label>Mod Program Split Ratio</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>