force-app/main/default/objects/Payment_Calc_Config__mdt/fields/No_Fee_Setup_Fee__c.field-meta.xml
<CustomField>
    <fullName>No_Fee_Setup_Fee__c</fullName>
    <description>Setup fee for California no-fee programs</description>
    <label>No-Fee Setup Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>