force-app/main/default/objects/Payment_Calc_Config__mdt/fields/Payment_Fallback_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Payment_Fallback_Ratio__c</fullName>
    <description>Fallback weekly payment as percentage of debt when current payment unknown</description>
    <label>Payment Fallback Ratio</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>