force-app/main/default/objects/Payment_Calc_Config__mdt/fields/Priority_Adjustment_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Priority_Adjustment_Multiplier__c</fullName>
    <description>Adjustment multiplier for priority debt calculations</description>
    <label>Priority Adjustment Multiplier</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>