force-app/main/default/objects/Payment_Calc_Config__mdt/fields/Program_Fee_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Program_Fee_Percentage__c</fullName>
    <label>Program Fee Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>