force-app/main/default/objects/Payment_Calc_Config__mdt/fields/Recommended_Min_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Min_Weeks__c</fullName>
    <description>Recommended minimum program duration (1 year)</description>
    <label>Recommended Min Weeks</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>