force-app/main/default/objects/Payment_Calc_Config__mdt/fields/Setup_Fee__c.field-meta.xml
<CustomField>
    <fullName>Setup_Fee__c</fullName>
    <description>Default one-time setup fee amount charged to client</description>
    <label>Setup Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>