force-app/main/default/objects/Payment_Calc_Config__mdt/fields/Setup_Fee_Max_Payments__c.field-meta.xml
<CustomField>
    <fullName>Setup_Fee_Max_Payments__c</fullName>
    <description>Maximum number of setup fee payment installments</description>
    <label>Setup Fee Max Payments</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>