force-app/main/default/objects/Payment_Calc_Config__mdt/fields/Setup_Fee_Payments__c.field-meta.xml
<CustomField>
    <fullName>Setup_Fee_Payments__c</fullName>
    <description>Number of payments over which setup fee is distributed</description>
    <label>Setup Fee Payments</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>