force-app/main/default/objects/Payment_Calc_Config__mdt/fields/Target_Payment_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Target_Payment_Percentage__c</fullName>
    <description>Default target payment as percentage of current payment</description>
    <label>Target Payment Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>