force-app/main/default/objects/Payment_Calc_Config__mdt/fields/Valid_Settlement_Values__c.field-meta.xml
<CustomField>
    <fullName>Valid_Settlement_Values__c</fullName>
    <description>Comma-separated valid settlement percentage options</description>
    <label>Valid Settlement Values</label>
    <length>100</length>
    <type>Text</type>
</CustomField>