force-app/main/default/objects/Payment_Calc_Config__mdt/fields/Weekly_To_Monthly_Factor__c.field-meta.xml
<CustomField>
    <fullName>Weekly_To_Monthly_Factor__c</fullName>
    <description>Conversion factor from weekly to monthly payments</description>
    <label>Weekly to Monthly Factor</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>